# PlateLibrary

./: .gitignore  README.md  config.json  pyproject.toml  requirements.txt  yoyo.ini
docker/: Dockerfile  README.md  docker-build.sh  docker-compose.yml  docker-push.sh
migrations/: 0001_initial_schema.py  0002_seed_scheme.py  0003_seed_series.py  0004_seed_species.py  0005_seed_microscope.py  0006_seed_objectives.py  0007_seed_camera.py  0008_seed_investigation.py  0009_plate_view.py  0010_location_latitude_longitude.py  0011_seed_locations.py  0012_hidden_plate.py  0013_series_code.py  0014_series_plate_format.py  0015_add_stain_to_view.py  0016_create_plate_stain.py  0017_remove_stain_id_from_plate.py  0018_multiple_plate_stains_view.py  0019_add_coordinate_system.py  0020_species_view.py  README.md
scripts/: export.sh  import.sh  make_venv.sh  run-browser.sh  run-datasette.sh  run-dev-editor.sh  run-dev-viewer.sh  run-editor.sh  run-streamlit.sh  update.sh
sql/: delete_plate.sql  export-investigations.sql  export.sql  fetch_investigations.sql  fetch_location.sql  fetch_location_list.sql  fetch_locations.sql  fetch_objectives.sql  fetch_plate.sql  fetch_scheme_list.sql  fetch_series.sql  fetch_series_list.sql  insert_investigation.sql  insert_plate.sql  insert_scheme.sql  load_existing_plate_references.sql  update_plate.sql  view-plates.sql  view.sql
src/: camera_form_renderer.py  camera_sql.py  export_plate_library.py  import_plate_library.py  investigation_form_renderer.py  investigation_sql.py  location_form_renderer.py  location_sql.py  main.py  plate_sql.py  (+18 more)
(+88 files in other folders)
