[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plate-library"
version = "1.12.0"
description = "Maintenance UI for a simple microscopy plate library"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit==1.55.0",
    "datasette==0.65.2",
    "pandas==2.3.3",
    "numpy==2.4.3",
    "openpyxl==3.1.5",
    "pillow==12.1.1",
    "GitPython==3.1.46",
    "requests==2.33.0",
    "uvicorn==0.42.0",
    "yoyo-migrations==9.0.0",
    "aiofiles==25.1.0",
    "tabulate==0.10.0",
    "pyproj==3.7.2",
    "mgrs==1.5.4",
    "pytest==3.7.2",
    "folium==0.20.0",
    "streamlit-folium==0.27.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]